--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">FinalProject</string>
     <string name="button_quzie">Quize</string>
+    <string name="button_xml">From Xml</string>
+    <string name="button_state">States</string>
+    <string name="button_help">Help</string>
     <string name="addMultiQuest">MultiQuest</string>
     <string name="addNumQuest">NumQuest</string>
     <string name="addTFQuest">T/F Quest</string>
@@ -8,7 +11,7 @@
     <string name="textAns">Answer:</string>
     <string name="input_quest">Input question here</string>
     <string name="submit">submit</string>
-    <string name="cancle">cancle</string>
+    <string name="cancel">cancel</string>
     <string name="rbt">true</string>
     <string name="rbf">fault</string>
     <string name="add">Add Quest</string>
@@ -16,5 +19,15 @@
     <string name="update">update</string>
     <string name="set_answer">set anwser</string>
     <!-- TODO: Remove or change this placeholder text -->
+    <string name="author">Author : Minyi Yang</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="intro">Instructions : </string>
+    <string name="ok">ok</string>
+    <string name="chose">Chose a type</string>
+    <string name="des">
+        [1] In the Java programming language, an interface is a reference type, similar to a class,
+        [2] that can contain only constants, method signatures, default methods, static methods,
+        and nested types. Method bodies exist only for default methods and static methods.
+        [3] Interfaces cannot be instantiated—they can only be implemented by classes or extended by other interfaces.
+    </string>
 </resources>
